# shrinkler-gba

./: .gitignore  CMakeLists.agbpack.txt  CMakeLists.old.txt  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
.reuse/: dep5
doc/: GBA-cart-header.md  dictionary-coders.html
libshrinkler/: CMakeLists.txt
libshrinkler-gba/: CMakeLists.txt
libshrinkler-gba/src/: dummy.cpp
libshrinkler/include/libshrinkler/: libshrinkler.hpp
libshrinkler/src/: shrinkler.cpp  shrinkler.ipp
libshrinkler/unittest/: main.cpp  shrinkler_parameters_test.cpp  shrinkler_test.cpp
libshrinklergba/: CMakeLists.txt
libshrinklergba/include/libshrinklergba/: command_line.hpp  options.hpp
libshrinklergba/src/: command_line.cpp  dummy.cpp
libshrinklergba/unittest/: command_line_test.cpp  main.cpp  options_test.cpp
shrinkler/: CMakeLists.txt  README.md
shrinkler-gba/: CMakeLists.txt
shrinkler-gba/src/: main.cpp
shrinkler/include/shrinkler/: shrinkler.hpp
shrinkler/src/: shrinkler.cpp  shrinkler.ipp  shrinkler_compressor.cpp
shrinkler/unittest/: main.cpp  shrinkler_compressor_test.cpp  shrinkler_parameters_test.cpp  shrinkler_test.cpp
shrinklergba/: CMakeLists.txt  shrinklergba_unittest_config.hpp.in  shrinklergba_version.hpp.in
shrinklergba/include/shrinklergba/: command_line.hpp  console.hpp  elf_strings.hpp  elfio_wrapper.hpp  gba_bios_common.hpp  gba_packer.hpp  huffman.hpp  input_file.hpp  lzss.hpp  options.hpp  table_printer.hpp
shrinklergba/src/: command_line.cpp  elf_strings.cpp  gba_bios_common.cpp  gba_packer.cpp  huffman.cpp  input_file.cpp  lzss.cpp  table_printer.cpp
shrinklergba/testdata/: .gitattributes  Makefile  invalid-elf-file.elf  lostmarbles.elf.license  thumb_entry.bin.license  thumb_entry.s
shrinklergba/unittest/: command_line_test.cpp  huffman_decoder_test.cpp  input_file_test.cpp  lzss_decoder_test.cpp  main.cpp  options_test.cpp  test_utilities.cpp  test_utilities.hpp
shrinklergbacore/: CMakeLists.txt  shrinklergbacore_unittest_config.hpp.in  shrinklergbacore_version.hpp.in
shrinklergbacore/include/shrinklergbacore/: adler32.hpp  cart_assembler.hpp  command_line.hpp  complement.hpp  console.hpp  depacker.hpp  elf_strings.hpp  elfio_wrapper.hpp  gba.hpp  gba_bios_common.hpp  gba_packer.hpp  huffman.hpp  input_file.hpp  lzss.hpp  options.hpp  table_printer.hpp
shrinklergbacore/src/: adler32.cpp  cart_assembler.cpp  command_line.cpp  complement.cpp  depacker.cpp  elf_strings.cpp  gba_bios_common.cpp  gba_packer.cpp  huffman.cpp  input_file.cpp  lzss.cpp  table_printer.cpp
shrinklergbacore/testdata/: Makefile  lostmarbles.elf  thumb_entry.elf  thumb_entry.s
shrinklergbacore/unittest/: adler32_test.cpp  command_line_test.cpp  complement_test.cpp  huffman_decoder_test.cpp  input_file_test.cpp  lzss_decoder_test.cpp  main.cpp  options_test.cpp  test_utilities.cpp  test_utilities.hpp
shrinklerwrapper/: CMakeLists.txt  README.md
shrinklerwrapper/include/shrinklerwrapper/: shrinklerwrapper.hpp
shrinklerwrapper/src/: shrinkler_compressor.cpp  shrinkler_compressor_impl.cpp  shrinkler_compressor_impl.hpp  shrinkler_compressor_internal.cpp  util.cpp  util.hpp
shrinklerwrapper/unittest/: main.cpp  shrinkler_compressor_test.cpp  shrinkler_parameters_test.cpp
src/shrinkler_gba/: CMakeLists.txt  adler32.cpp  adler32.cppm  shrinkler_gba.cppm
src/shrinkler_gba_console/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/shrinkler_gba_unit_test/: CMakeLists.txt  adler32_test.cpp  shrinkler_gba_unit_test_config.hpp.in
